option java_package = "ralph_version_protobuffs";
option java_outer_classname = "SingleDeviceUpdateProto";

import "util.proto";

message SingleDeviceUpdateMessage
{
    enum UpdateType
    {
        STAGE = 0;
        COMPLETE = 1;
        BACKOUT = 2;
    }
    required UpdateType update_type = 1;

    required uint64 root_commit_lamport_time = 2;
    required uint64 local_lamport_time = 3;
    required UUID root_application_uuid = 4;
    required string event_name = 5;
    required UUID event_uuid = 6;

    // Serialized version of update.  May, for instance, be a
    // serialized protocol buffer that can deserialize later.
    required bytes update_msg_data = 7;
}
